# mibus-scraper

./: .gitignore  README.md  archive_data.py  get_arrival_info.py  pyproject.toml  scrapy.cfg  unique_paradas.py
mibus/: items.py  middlewares.py  pipelines.py  settings.py
mibus/spiders/: businfo.py  rutas.py
