[tool.poetry]
name = "mibus-scraper"
version = "0.1.0"
description = "Scrapes bus route data from the MiBus website"
authors = ["Agustín Cantilo-Paz Vega"]

[tool.poetry.dependencies]
python = "^3.10"
chompjs = "^1.1.6"
tzdata = "^2022.1"
scrapy = "^2.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.8"
commitizen = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
